# nano-rlvr

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  pyproject.toml  train_grpo.py  train_reinforce.py
src/nano_rlvr/: __init__.py  data.py  model.py  rewards.py  utils.py
