[project]
name = "nano-rlvr"
version = "0.1.0"
description = "Minimal, didactic RLVR (Reinforcement Learning with Verifiable Rewards)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.37",
]

[project.optional-dependencies]
dev = [
    "wandb",
    "pre-commit",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nano_rlvr"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
